--- a/config/cloudinary.yml
+++ b/config/cloudinary.yml
@@ -1,19 +1,20 @@
 ---
+default: &default
+  cloud_name: <%= ENV.fetch("CLOUDINARY_NAME") %>
+  api_key: <%= ENV.fetch("CLOUDINARY_KEY") %>
+  api_secret: <%= ENV.fetch("CLOUDINARY_SECRET") %>
+  enhance_image_tag: true
+
 development:
-  cloud_name: hzzcqexlr
-  api_key: '723183542625713'
-  api_secret: LeXD-D-s70oL6ctNtJpHQJUWBPM
-  enhance_image_tag: true
+  <<: *default
   static_file_support: false
-production:
-  cloud_name: hzzcqexlr
-  api_key: '723183542625713'
-  api_secret: LeXD-D-s70oL6ctNtJpHQJUWBPM
-  enhance_image_tag: true
+
+development:
+  <<: *default
   static_file_support: true
+
 test:
-  cloud_name: hzzcqexlr
-  api_key: '723183542625713'
-  api_secret: LeXD-D-s70oL6ctNtJpHQJUWBPM
-  enhance_image_tag: true
+  <<: *default
   static_file_support: false
+
+
