Changed .gitignore and added .keep files in some of the ignored folders

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,23 @@
 # direnv file with ENV variables
 .envrc
 
-# Folders with node modules, temporary files or logs
+# Ignore Node modules
 node_modules/
-tmp/
-log/
+
+# Ignore bundler config.
+.bundle/
+
+# Ignore all logfiles and tempfiles.
+log/*
+tmp/*
+!log/.keep
+!tmp/.keep
+
+# Ignore pidfiles, but keep the directory.
+tmp/pids/*
+!tmp/pids/
+!tmp/pids/.keep
+
+# Ignore uploaded files in development.
+storage/*
+!storage/.keep
